# ignifer

./: .gitignore  Makefile  README.md  pyproject.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-build-configuration.md  1-2-core-models-configuration.md  1-3-cache-layer-implementation.md  1-4-adapter-protocol-error-hierarchy.md  1-5-gdelt-adapter.md  1-6-output-formatting-briefing-tool.md  2-1-world-bank-adapter.md  2-2-economic-context-tool.context.xml  2-2-economic-context-tool.md  2-3-time-range-support-for-briefings.context.xml  2-3-time-range-support-for-briefings.md  3-1-wikidata-adapter.md  3-2-entity-resolution-module.md  6-1-acled-adapter.context.xml  6-1-acled-adapter.md  6-2-opensanctions-adapter.context.xml  6-2-opensanctions-adapter.md  6-3-conflict-analysis-tool.context.xml  6-3-conflict-analysis-tool.md  6-4-sanctions-check-tool.context.xml  6-4-sanctions-check-tool.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-ignifer-2026-01-08.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
tests/: conftest.py  test_cache.py  test_citation.py  test_confidence.py  test_config.py  test_conflict_analysis.py  test_entity_lookup.py  test_output.py  test_rigor.py  test_sanctions_check.py  test_server.py  test_server_economic.py  test_source_metadata.py  test_timeparse.py  test_track_flight.py  test_track_vessel.py
(+54 files in other folders)
