[project]
name = "ignifer"
version = "0.1.0"
description = "OSINT MCP Server aggregating 7 data sources for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scott"}
]
dependencies = [
    "aiosqlite>=0.20",
    "fastmcp>=2.14,<3",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "tenacity>=9.1",
    "trafilatura>=2.0.0",
    "websockets>=12.0",
]

[project.scripts]
ignifer = "ignifer.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ignifer"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
